# retrodungeon

./: Cargo.toml  README.md  build.rs  build.sh  spawnables.yaml
data/: roomtemplates.yaml  spawnables.yaml  spawnentries.yaml  tiles.yaml
lib/derive_entity_template/: Cargo.toml
lib/derive_entity_template/src/: lib.rs
notes/: interact  room-templates.save
src/: component.rs  error.rs  event.rs  game.rs  logger.rs  main.rs  map.rs  resources.rs  spawning.rs  system.rs  ui.rs  world.rs
src/component/: attributes.rs  behavior.rs  combat.rs  effect.rs  health.rs  image.rs  items.rs  responses.rs  spell.rs  tags.rs
src/event/: argument_names.rs  combat_events.rs  interact_events.rs  response_functions.rs  spell_events.rs  stealth_events.rs
src/map/: boxextends.rs  generation.rs  los.rs  pathfinding.rs  room.rs  tile.rs  utils.rs
src/resources/: id.rs  serialize_gametile.rs  serialize_roomtemplate.rs  serialize_spawnable.rs  serialize_spawnentry.rs  serialize_spell.rs
src/spawning/: entitytemplate.rs  roomtemplate.rs  spawnentry.rs
src/system/: definitions.rs  error.rs
ui/: old.slint
