[package]
name = "retrodungeon"
version = "0.3.2"
edition = "2021"

[dependencies]
petgraph = "0.6.5"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
derive_entity_template = { path = "lib/derive_entity_template" }
priority-queue = "2.1.1"
slint = { version = "1.8.0", default-features = false, features = ["backend-winit", "compat-1-2"] }
num = "0.4.3"
itertools = "0.13.0"
log = "0.4.22"
derive_more = {version = "1.0.0", features = ["from"]}
simplelog = "0.12.2"


[build-dependencies]
slint-build = "1.8.0"

[features]
femtovg = ["slint/renderer-femtovg"]
skia = ["slint/renderer-skia"]